# 8queens

./: .gitignore  CMakeLists.txt  README.md
src/: chessvisualizer.h  config.h  main.cpp  queenssolver.h  solutions.h
